[gd_scene load_steps=2 format=3 uid="uid://baya37l0ovqlq"]

[ext_resource type="Script" path="res://UI/Map/ZoneTemplate.gd" id="1_hd6la"]

[node name="ZoneTemplate" type="Area2D"]
script = ExtResource("1_hd6la")

[node name="ZoneShapePolygon" type="CollisionPolygon2D" parent="."]

[node name="ZoneShapeLine" type="Line2D" parent="."]
visible = false
closed = true
width = 2.0

[node name="ZoneShapeFill" type="Polygon2D" parent="."]
visible = false

[node name="ZoneSprite" type="Sprite2D" parent="."]
visible = false
hframes = 5

[node name="AnimationCycleTime" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="FrameChangeTime" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="AnimationCycleTime" to="." method="_on_animation_cycle_time_timeout"]
[connection signal="timeout" from="FrameChangeTime" to="." method="_on_frame_change_time_timeout"]
